// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel component doesn't render controls when scroll is finite and pages per slides = total slides 1`] = `
<div>
  <div
    class="Carousel-wrapper-269 Carousel-wrapperGutter-270"
  >
    <div
      class="Carousel-root-265 Carousel-opacity-272 Carousel-carouselGutter-267"
      data-testid="carousel"
    >
      <div
        style="overflow-x: hidden;"
      >
        <div
          class="react-swipeable-view-container"
          style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
        >
          <div
            aria-hidden="false"
            class="Carousel__slide--global"
            data-swipeable="true"
            style="width: 100%; flex-shrink: 0; overflow: auto;"
          >
            <div
              class="Carousel-page-268"
            >
              <div
                class="Carousel-slide-266"
                data-test-class-name="slide"
                style="width: 33.333333333333336%;"
              >
                First slide
              </div>
              <div
                class="Carousel-slide-266"
                data-test-class-name="slide"
                style="width: 33.333333333333336%;"
              >
                Second slide
              </div>
              <div
                class="Carousel-slide-266"
                data-test-class-name="slide"
                style="width: 33.333333333333336%;"
              >
                Third slide
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel component navigates to next page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,11 @@
          <div
            style=\\"overflow-x: hidden;\\"
          >
            <div
              class=\\"react-swipeable-view-container\\"
-             style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+             style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-400%, 0);\\"
            >
              <div
                aria-hidden=\\"false\\"
                class=\\"Carousel__slide--global\\"
                data-swipeable=\\"true\\"
@@ -26,11 +26,11 @@
                  <div
                    class=\\"Carousel-slide-48\\"
                    data-test-class-name=\\"slide\\"
                    style=\\"width: 100%;\\"
                  >
-                   First slide
+                   Second slide
                  </div>
                </div>
              </div>
            </div>
          </div>
@@ -67,16 +67,21 @@
          >
            <span
              class=\\"SlideControls-slidingSlot-61\\"
            >
              <span
-               class=\\"SlideControls-numbers-64\\"
+               class=\\"SlideControls-numbers-64 SlideControls-up-65\\"
+             >
+               <span
+                 class=\\"SlideControls-number-69\\"
                >
+                 01
+               </span>
                <span
                  class=\\"SlideControls-number-69 SlideControls-active-68\\"
                >
-                 01
+                 02
                </span>
              </span>
            </span>
            <span
              class=\\"SlideControls-total-67\\""
`;

exports[`Carousel component navigates to previous page 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,11 +10,11 @@
          <div
            style=\\"overflow-x: hidden;\\"
          >
            <div
              class=\\"react-swipeable-view-container\\"
-             style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+             style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-200%, 0);\\"
            >
              <div
                aria-hidden=\\"false\\"
                class=\\"Carousel__slide--global\\"
                data-swipeable=\\"true\\"
@@ -26,11 +26,11 @@
                  <div
                    class=\\"Carousel-slide-94\\"
                    data-test-class-name=\\"slide\\"
                    style=\\"width: 100%;\\"
                  >
-                   First slide
+                   Third slide
                  </div>
                </div>
              </div>
            </div>
          </div>
@@ -67,14 +67,19 @@
          >
            <span
              class=\\"SlideControls-slidingSlot-107\\"
            >
              <span
-               class=\\"SlideControls-numbers-110\\"
+               class=\\"SlideControls-numbers-110 SlideControls-down-112\\"
              >
                <span
                  class=\\"SlideControls-number-115 SlideControls-active-114\\"
+               >
+                 03
+               </span>
+               <span
+                 class=\\"SlideControls-number-115\\"
                >
                  01
                </span>
              </span>
            </span>"
`;

exports[`Carousel component renders correctly 1`] = `
<div>
  <div
    class="Carousel-wrapper-5"
  >
    <div
      class="Carousel-root-1"
      data-testid="carousel"
    >
      <div
        style="overflow-x: hidden;"
      >
        <div
          class="react-swipeable-view-container"
          style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
        >
          <div
            aria-hidden="false"
            class="Carousel__slide--global"
            data-swipeable="true"
            style="width: 100%; flex-shrink: 0; overflow: auto;"
          >
            <div
              class="Carousel-page-4"
            >
              <div
                class="Carousel-slide-2"
                data-test-class-name="slide"
                style="width: 100%;"
              >
                First slide
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SlideControls-root-11"
    >
      <button
        aria-label="previous"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-38 iconButton IconButton-medium-44 IconButton-text-40"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root SlideControls-chevron-17"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <span
        class="SlideControls-middleContainer-16"
      >
        <span
          class="SlideControls-slidingSlot-15"
        >
          <span
            class="SlideControls-numbers-18"
          >
            <span
              class="SlideControls-number-23 SlideControls-active-22"
            >
              01
            </span>
          </span>
        </span>
        <span
          class="SlideControls-total-21"
        >
          03
        </span>
      </span>
      <button
        aria-label="next"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-38 iconButton IconButton-medium-44 IconButton-text-40"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root SlideControls-chevron-17"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel component renders correctly with arrow controls 1`] = `
<div>
  <div
    class="Carousel-wrapper-235"
  >
    <div
      class="Carousel-root-231 Carousel-opacity-238"
      data-testid="carousel"
    >
      <div
        style="overflow-x: hidden;"
      >
        <div
          class="react-swipeable-view-container"
          style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
        >
          <div
            aria-hidden="false"
            class="Carousel__slide--global"
            data-swipeable="true"
            style="width: 100%; flex-shrink: 0; overflow: auto;"
          >
            <div
              class="Carousel-page-234"
            >
              <div
                class="Carousel-slide-232"
                data-test-class-name="slide"
                style="width: 33.333333333333336%;"
              >
                First slide
              </div>
              <div
                class="Carousel-slide-232"
                data-test-class-name="slide"
                style="width: 33.333333333333336%;"
              >
                Second slide
              </div>
              <div
                class="Carousel-slide-232"
                data-test-class-name="slide"
                style="width: 33.333333333333336%;"
              >
                Third slide
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="Move left"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-256 iconButton IconButton-medium-262 IconButton-contained-257 ArrowControl-root-241 ArrowControl-left-242"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root ArrowControl-chevron-244"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-label="Move right"
      class="MuiButtonBase-root MuiIconButton-root IconButton-root-256 iconButton IconButton-medium-262 IconButton-contained-257 ArrowControl-root-241 ArrowControl-right-243"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root ArrowControl-chevron-244"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Carousel component works when controlled 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -9,11 +9,11 @@
        <div
          style=\\"overflow-x: hidden;\\"
        >
          <div
            class=\\"react-swipeable-view-container\\"
-           style=\\"flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;\\"
+           style=\\"flex-direction: row; transition: transform 0.35s cubic-bezier(0.15, 0.3, 0.25, 1) 0s; direction: ltr; display: flex; will-change: transform; transform: translate(-400%, 0);\\"
          >
            <div
              aria-hidden=\\"false\\"
              class=\\"Carousel__slide--global\\"
              data-swipeable=\\"true\\"
@@ -25,11 +25,11 @@
                <div
                  class=\\"Carousel-slide-140\\"
                  data-test-class-name=\\"slide\\"
                  style=\\"width: 100%;\\"
                >
-                 First slide
+                 Second slide
                </div>
              </div>
            </div>
          </div>
        </div>
@@ -66,16 +66,21 @@
        >
          <span
            class=\\"SlideControls-slidingSlot-153\\"
          >
            <span
-             class=\\"SlideControls-numbers-156\\"
+             class=\\"SlideControls-numbers-156 SlideControls-up-157\\"
+           >
+             <span
+               class=\\"SlideControls-number-161\\"
              >
+               01
+             </span>
              <span
                class=\\"SlideControls-number-161 SlideControls-active-160\\"
              >
-               01
+               02
              </span>
            </span>
          </span>
          <span
            class=\\"SlideControls-total-159\\""
`;
